# Vacations-Website

./: README.md
Backend/: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
Backend/include/objects/: coupon.h  discount.h  package.h  product.h  room.h  user.h  vacation.h
Backend/include/routes/: coupon.h  discount.h  transaction.h  user.h  vacation.h
Backend/include/utils/: api_responses.h
Backend/src/objects/: coupon.cpp  discount.cpp  package.cpp  product.cpp  room.cpp  user.cpp  vacation.cpp
Backend/src/routes/: coupon.cpp  discount.cpp  transaction.cpp  user.cpp  vacation.cpp
Backend/src/utils/: api_responses.cpp
Frontend/: package.json  pnpm-lock.yaml
Frontend/app/: layout.tsx  page.tsx
Frontend/app/api/: AuthenticationController.tsx  AuthenticationProvider.tsx  CheckoutController.tsx  CouponsController.tsx  DiscountsController.tsx  TransactionsController.tsx  VacationsController.tsx
Frontend/app/api/auth/[...nextauth]/: route.ts
Frontend/app/checkout/: page.tsx
Frontend/app/components/: Checkout.tsx  MoreDetails.tsx  Navbar.tsx  PageNavigator.tsx  VacationCard.tsx
Frontend/app/login/: layout.tsx  page.tsx
Frontend/app/logout/: layout.tsx  page.tsx
Frontend/app/register/: layout.tsx  page.tsx
Frontend/app/types/: types.tsx
Frontend/components/ui/: pagination.tsx
Frontend/types/: next-auth.d.ts
